# 3D_MRI

./: CMakeLists.txt  main.cpp
images/: 1-01.dcm  1-04.dcm
utils/: DcmReader.cc  DcmReader.hh  Mat3d.cc  Mat3d.hh
visualizer/: Visualizer.cc  Visualizer.hh
visualizer/glad/include/glad/: gl.h
visualizer/shaders/: line.frag  line.geom  line.vert  point.frag  point.vert  texture.vert
visualizer/utils/: Camera.cc  Camera.hh  EBO.cc  EBO.hh  Mesh.cc  Mesh.hh  Shader.cc  Shader.hh  Texture.cc  Texture.hh  ThreadPool.cc  ThreadPool.hh  VAO.cc  VAO.hh  VBO.cc  VBO.hh
